@@ -4,6 +4,7 @@ Changelog
 6.0.0 (2014-XX-XX)
 ------------------
 
+ * removed Swift_Mime_HeaderFactory interface
  * removed Swift_Encoding
  * removed the Swift_Transport_MailInvoker interface and Swift_Transport_SimpleMailInvoker class
  * removed the Swift_SignedMessage class
